--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="move.js"></script>
   </head>
   <div className="App">
-    <header className="App-header">
       <h1 class="h1">mfletcher.me</h1>
       <div class="icons_container">
         <a
@@ -19,10 +18,9 @@
           <img
             src="https://aegis-icons.github.io/icons/primary/GitHub.svg"
             alt="GitHub"
-            height="250vh"
+            class="icon"
           />
         </a>
       </div>
-    </header>
   </div>
 </html>
