--- a/index.html
+++ b/index.html
@@ -8,19 +8,37 @@
     <script src="move.js"></script>
   </head>
   <div className="App">
+    <div>
       <h1 class="h1">mfletcher.me</h1>
-      <div class="icons_container">
-        <a
-          href="https://github.com/mfletcher2"
+    </div>
+    <div class="icons_container">
+      <a href="https://github.com/mfletcher2" class="icon_link">
+        <img
+          src="https://aegis-icons.github.io/icons/primary/GitHub.svg"
+          alt="GitHub"
           onmouseenter="mouseEnter(this)"
           onmouseleave="mouseLeave(this)"
-        >
-          <img
-            src="https://aegis-icons.github.io/icons/primary/GitHub.svg"
-            alt="GitHub"
-            class="icon"
-          />
-        </a>
-      </div>
+          class="icon"
+        />
+      </a>
+      <a href="https://panel.mfletcher.me" class="icon_link">
+        <img
+          src="https://avatars.githubusercontent.com/u/9778794"
+          alt="PufferPanel"
+          onmouseenter="mouseEnter(this)"
+          onmouseleave="mouseLeave(this)"
+          class="icon"
+        />
+      </a>
+      <a href="https://cloud.mfletcher.me" class="icon_link">
+        <img
+          src="https://aegis-icons.github.io/icons/primary/Nextcloud.svg"
+          alt="PufferPanel"
+          onmouseenter="mouseEnter(this)"
+          onmouseleave="mouseLeave(this)"
+          class="icon"
+        />
+      </a>
+    </div>
   </div>
 </html>
