--- a/index.html
+++ b/index.html
@@ -12,18 +12,21 @@
       <h1 class="h1">mfletcher.me</h1>
     </div>
     <div class="icons_container">
-      <a href="https://github.com/mfletcher2" class="icon_link">
+      <a
+        href="https://github.com/mfletcher2"
+        class="icon_link"
+        onmouseenter="mouseEnter(this)"
+        onmouseleave="mouseLeave(this)"
+      >
         <img
-          src="https://aegis-icons.github.io/icons/primary/GitHub.svg"
+          src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/github.svg"
           alt="GitHub"
-          onmouseenter="mouseEnter(this)"
-          onmouseleave="mouseLeave(this)"
           class="icon"
         />
       </a>
       <a href="https://panel.mfletcher.me" class="icon_link">
         <img
-          src="https://avatars.githubusercontent.com/u/9778794"
+          src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/minecraft.svg"
           alt="PufferPanel"
           onmouseenter="mouseEnter(this)"
           onmouseleave="mouseLeave(this)"
@@ -32,7 +35,7 @@
       </a>
       <a href="https://cloud.mfletcher.me" class="icon_link">
         <img
-          src="https://aegis-icons.github.io/icons/primary/Nextcloud.svg"
+          src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/nextcloud.svg"
           alt="PufferPanel"
           onmouseenter="mouseEnter(this)"
           onmouseleave="mouseLeave(this)"
@@ -41,4 +44,14 @@
       </a>
     </div>
   </div>
+  <footer class="footer">
+    <a href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme"
+      >Papirus Icon Theme</a
+    >
+    is licensed under the
+    <a
+      href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/blob/master/LICENSE"
+      >GNU GPLv3</a
+    >.
+  </footer>
 </html>
