Grow icons on hover

--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
           class="icon"
         />
       </a>
-      <a href="https://panel.mfletcher.me" class="icon_link">
+      <a href="https://minecraft.mfletcher.me" class="icon_link">
         <img
           src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/minecraft.svg"
           alt="PufferPanel"
-          onmouseenter="mouseEnter(this)"
-          onmouseleave="mouseLeave(this)"
           class="icon"
         />
       </a>
@@ -37,8 +35,6 @@
         <img
           src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/nextcloud.svg"
           alt="PufferPanel"
-          onmouseenter="mouseEnter(this)"
-          onmouseleave="mouseLeave(this)"
           class="icon"
         />
       </a>
