add libreddit link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
           class="icon"
         />
       </a>
+      <a href="https://libreddit.mfletcher.me" class="icon_link">
+        <img
+          src="https://avatars.githubusercontent.com/u/117129612?s=200"
+          alt="LibReddit"
+          class="icon"
+        />
+      </a>
     </div>
   </div>
   <footer class="footer">
