Add title and favicon

--- a/index.html
+++ b/index.html
@@ -5,45 +5,46 @@
       href="https://fonts.googleapis.com/css?family=Noto Sans Mono"
       rel="stylesheet"
     />
+    <title>Max</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
-  <div className="App">
-    <div>
-      <h1 class="h1">mfletcher.me</h1>
+  <body>
+    <div className="App">
+      <div>
+        <h1 class="h1">mfletcher.me</h1>
+      </div>
+      <div class="icons_container">
+        <a href="https://github.com/mfletcher2" class="icon_link">
+          <img
+            src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/github.svg"
+            alt="GitHub"
+            class="icon"
+          />
+        </a>
+        <a href="https://minecraft.mfletcher.me" class="icon_link">
+          <img
+            src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/minecraft.svg"
+            alt="PufferPanel"
+            class="icon"
+          />
+        </a>
+        <a href="https://cloud.mfletcher.me" class="icon_link">
+          <img
+            src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/nextcloud.svg"
+            alt="PufferPanel"
+            class="icon"
+          />
+        </a>
+        <a href="https://libreddit.mfletcher.me" class="icon_link">
+          <img
+            src="https://avatars.githubusercontent.com/u/117129612?s=200"
+            alt="LibReddit"
+            class="icon"
+          />
+        </a>
+      </div>
     </div>
-    <div class="icons_container">
-      <a
-        href="https://github.com/mfletcher2"
-        class="icon_link"
-      >
-        <img
-          src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/github.svg"
-          alt="GitHub"
-          class="icon"
-        />
-      </a>
-      <a href="https://minecraft.mfletcher.me" class="icon_link">
-        <img
-          src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/minecraft.svg"
-          alt="PufferPanel"
-          class="icon"
-        />
-      </a>
-      <a href="https://cloud.mfletcher.me" class="icon_link">
-        <img
-          src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/nextcloud.svg"
-          alt="PufferPanel"
-          class="icon"
-        />
-      </a>
-      <a href="https://libreddit.mfletcher.me" class="icon_link">
-        <img
-          src="https://avatars.githubusercontent.com/u/117129612?s=200"
-          alt="LibReddit"
-          class="icon"
-        />
-      </a>
-    </div>
-  </div>
+  </body>
   <footer class="footer">
     <a href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme"
       >Papirus Icon Theme</a
