--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
     />
     <title>Max</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
     <div className="App">
