--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
       rel="stylesheet"
     />
     <title>Max</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
+    <canvas class="canvas"></canvas>
     <div className="App">
       <div>
         <h1 class="h1">mfletcher.me</h1>
@@ -44,15 +45,22 @@
         </a>
       </div>
     </div>
+    <footer class="footer">
+      <p>
+        <a href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme"
+          >Papirus Icon Theme</a
+        >
+        is licensed under the
+        <a
+          href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/blob/master/LICENSE"
+          >GNU GPLv3</a
+        >.
+      </p>
+      <img
+        id="brush"
+        src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/24x24/actions/draw-brush.svg"
+      />
+    </footer>
   </body>
-  <footer class="footer">
-    <a href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme"
-      >Papirus Icon Theme</a
-    >
-    is licensed under the
-    <a
-      href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/blob/master/LICENSE"
-      >GNU GPLv3</a
-    >.
-  </footer>
+  <script src="index.js"></script>
 </html>
