Add dynmap and track map

--- a/index.html
+++ b/index.html
@@ -22,24 +22,27 @@
             class="icon"
           />
         </a>
-        <a href="https://minecraft.mfletcher.me" class="icon_link">
+        <div class="dropdown">
           <img
             src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/minecraft.svg"
-            alt="PufferPanel"
-            class="icon"
+            alt="Minecraft"
+            class="icon" 
           />
-        </a>
+          <div class="dropdown-content">
+            <a href="https://minecraft.mfletcher.me" class="icon_link">
+              <img src="https://avatars.githubusercontent.com/u/9778794" class="dropdown-icon"/>
+            </a>
+            <a href="https://map.mfletcher.me" class="icon_link">
+              <img src="https://avatars.githubusercontent.com/u/566729" class="dropdown-icon"/>
+            </a>
+            <a href="https://trackmap.mfletcher.me" class="icon_link">
+              <img src="https://cdn.modrinth.com/data/gxoNIjg6/a67aa736ddbd20c45cca55d1dc5ef03c2caf841f.png" class="dropdown-icon"/>
+          </div>
+        </div>
         <a href="https://cloud.mfletcher.me" class="icon_link">
           <img
             src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/nextcloud.svg"
             alt="PufferPanel"
-            class="icon"
-          />
-        </a>
-        <a href="https://libreddit.mfletcher.me" class="icon_link">
-          <img
-            src="https://avatars.githubusercontent.com/u/117129612?s=200"
-            alt="LibReddit"
             class="icon"
           />
         </a>
