--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <canvas class="canvas"></canvas>
     <div className="App">
       <div>
-        <h1 class="h1">mfletcher.me</h1>
+        <h1 class="h1">fmax.みんな</h1>
       </div>
       <div class="icons_container">
         <a href="https://github.com/mfletcher2" class="icon_link">
