Update mc links

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             class="icon" 
           />
           <div class="dropdown-content">
-            <a href="https://minecraft.mfletcher.me" class="icon_link">
+            <a href="https://max.diamonds" class="icon_link">
               <img src="https://avatars.githubusercontent.com/u/9778794" class="dropdown-icon"/>
             </a>
-            <a href="https://map.mfletcher.me" class="icon_link">
+            <a href="https://map.max.diamonds" class="icon_link">
               <img src="https://avatars.githubusercontent.com/u/566729" class="dropdown-icon"/>
             </a>
-            <a href="https://trackmap.mfletcher.me" class="icon_link">
+            <a href="https://trackmap.max.diamonds" class="icon_link">
               <img src="https://cdn.modrinth.com/data/gxoNIjg6/a67aa736ddbd20c45cca55d1dc5ef03c2caf841f.png" class="dropdown-icon"/>
           </div>
         </div>
