--- a/index.html
+++ b/index.html
@@ -1,69 +1,56 @@
 <html>
-  <head>
-    <link rel="stylesheet" href="index.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Noto Sans Mono"
-      rel="stylesheet"
-    />
-    <title>Max</title>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <canvas class="canvas"></canvas>
-    <div className="App">
-      <div>
-        <h1 class="h1">fmax.みんな</h1>
-      </div>
-      <div class="icons_container">
-        <a href="https://github.com/mfletcher2" class="icon_link">
-          <img
-            src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/github.svg"
-            alt="GitHub"
-            class="icon"
-          />
-        </a>
-        <div class="dropdown">
-          <img
-            src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/minecraft.svg"
-            alt="Minecraft"
-            class="icon" 
-          />
-          <div class="dropdown-content">
-            <a href="https://max.diamonds" class="icon_link">
-              <img src="https://avatars.githubusercontent.com/u/9778794" class="dropdown-icon"/>
-            </a>
-            <a href="https://map.max.diamonds" class="icon_link">
-              <img src="https://avatars.githubusercontent.com/u/566729" class="dropdown-icon"/>
-            </a>
-            <a href="https://trackmap.max.diamonds" class="icon_link">
-              <img src="https://cdn.modrinth.com/data/gxoNIjg6/a67aa736ddbd20c45cca55d1dc5ef03c2caf841f.png" class="dropdown-icon"/>
-          </div>
-        </div>
-        <a href="https://cloud.mfletcher.me" class="icon_link">
-          <img
-            src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/nextcloud.svg"
-            alt="PufferPanel"
-            class="icon"
-          />
-        </a>
-      </div>
+
+<head>
+  <link rel="stylesheet" href="index.css" />
+  <link href="https://fonts.googleapis.com/css?family=Noto Sans Mono" rel="stylesheet" />
+  <title>Max</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+</head>
+
+<body>
+  <canvas class="canvas"></canvas>
+  <div className="App">
+    <div>
+      <h1 class="h1">fmax.みんな</h1>
     </div>
-    <footer class="footer">
-      <p>
-        <a href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme"
-          >Papirus Icon Theme</a
-        >
-        is licensed under the
-        <a
-          href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/blob/master/LICENSE"
-          >GNU GPLv3</a
-        >.
-      </p>
-      <img
-        id="brush"
-        src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/24x24/actions/draw-brush.svg"
-      />
-    </footer>
-  </body>
-  <script src="index.js"></script>
+    <div class="icons_container">
+      <a href="https://github.com/mfletcher2" class="icon_link">
+        <img src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/github.svg"
+          alt="GitHub" class="icon" />
+      </a>
+      <div class="dropdown">
+        <img
+          src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/minecraft.svg"
+          alt="Minecraft" class="icon" />
+        <div class="dropdown-content">
+          <a href="https://max.diamonds" class="icon_link">
+            <img src="https://avatars.githubusercontent.com/u/9778794" class="dropdown-icon" />
+          </a>
+          <a href="https://map.max.diamonds" class="icon_link">
+            <img src="https://avatars.githubusercontent.com/u/566729" class="dropdown-icon" />
+          </a>
+          <a href="https://trackmap.max.diamonds" class="icon_link">
+            <img src="https://cdn.modrinth.com/data/gxoNIjg6/a67aa736ddbd20c45cca55d1dc5ef03c2caf841f.png"
+              class="dropdown-icon" />
+        </div>
+      </div>
+      <a href="https://cloud.mfletcher.me" class="icon_link">
+        <img
+          src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/nextcloud.svg"
+          alt="PufferPanel" class="icon" />
+      </a>
+    </div>
+  </div>
+  <footer class="footer">
+    <p>
+      <a href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme">Papirus Icon Theme</a>
+      is licensed under the
+      <a href="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/blob/master/LICENSE">GNU GPLv3</a>.
+    </p>
+    <img id="brush"
+      src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/24x24/actions/draw-brush.svg" />
+  </footer>
+</body>
+<script src="index.js"></script>
+
 </html>
