Change panel URL

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           src="https://github.com/PapirusDevelopmentTeam/papirus-icon-theme/raw/master/Papirus/16x16/apps/minecraft.svg"
           alt="Minecraft" class="icon" />
         <div class="dropdown-content">
-          <a href="https://max.diamonds" class="icon_link">
+          <a href="https://panel.max.diamonds" class="icon_link">
             <img src="https://avatars.githubusercontent.com/u/9778794" class="dropdown-icon" />
           </a>
           <a href="https://map.max.diamonds" class="icon_link">
